src/YlangParser.cpp

// Generated from Ylang.g4 by ANTLR 4.7.1


#include "Visitor.h"

#include "YlangParser.h"


using namespace antlrcpp;
using namespace antlr4;

YlangParser::YlangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

YlangParser::~YlangParser() {
  delete _interpreter;
}

std::string YlangParser::getGrammarFileName() const {
  return "Ylang.g4";
}

const std::vector<std::string>& YlangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& YlangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CodeContext ------------------------------------------------------------------

YlangParser::CodeContext::CodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* YlangParser::CodeContext::EOF() {
  return getToken(YlangParser::EOF, 0);
}

std::vector<YlangParser::LineContext *> YlangParser::CodeContext::line() {
  return getRuleContexts<YlangParser::LineContext>();
}

YlangParser::LineContext* YlangParser::CodeContext::line(size_t i) {
  return getRuleContext<YlangParser::LineContext>(i);
}


size_t YlangParser::CodeContext::getRuleIndex() const {
  return YlangParser::RuleCode;
}

antlrcpp::Any YlangParser::CodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitCode(this);
  else
    return visitor->visitChildren(this);
}

YlangParser::CodeContext* YlangParser::code() {
  CodeContext *_localctx = _tracker.createInstance<CodeContext>(_ctx, getState());
  enterRule(_localctx, 0, YlangParser::RuleCode);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(13); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(12);
      dynamic_cast<CodeContext *>(_localctx)->lines = line();
      setState(15); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == YlangParser::T__0);
    setState(17);
    match(YlangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

YlangParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t YlangParser::LineContext::getRuleIndex() const {
  return YlangParser::RuleLine;
}

void YlangParser::LineContext::copyFrom(LineContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DefinLineContext ------------------------------------------------------------------

YlangParser::DefinContext* YlangParser::DefinLineContext::defin() {
  return getRuleContext<YlangParser::DefinContext>(0);
}

YlangParser::DefinLineContext::DefinLineContext(LineContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::DefinLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitDefinLine(this);
  else
    return visitor->visitChildren(this);
}
YlangParser::LineContext* YlangParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 2, YlangParser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<LineContext *>(_tracker.createInstance<YlangParser::DefinLineContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(19);
    dynamic_cast<DefinLineContext *>(_localctx)->d = defin();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinContext ------------------------------------------------------------------

YlangParser::DefinContext::DefinContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t YlangParser::DefinContext::getRuleIndex() const {
  return YlangParser::RuleDefin;
}

void YlangParser::DefinContext::copyFrom(DefinContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExternFuncDefContext ------------------------------------------------------------------

std::vector<tree::TerminalNode *> YlangParser::ExternFuncDefContext::ID() {
  return getTokens(YlangParser::ID);
}

tree::TerminalNode* YlangParser::ExternFuncDefContext::ID(size_t i) {
  return getToken(YlangParser::ID, i);
}

YlangParser::ExternFuncDefContext::ExternFuncDefContext(DefinContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::ExternFuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitExternFuncDef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncDefContext ------------------------------------------------------------------

std::vector<tree::TerminalNode *> YlangParser::FuncDefContext::ID() {
  return getTokens(YlangParser::ID);
}

tree::TerminalNode* YlangParser::FuncDefContext::ID(size_t i) {
  return getToken(YlangParser::ID, i);
}

YlangParser::ExprContext* YlangParser::FuncDefContext::expr() {
  return getRuleContext<YlangParser::ExprContext>(0);
}

YlangParser::FuncDefContext::FuncDefContext(DefinContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::FuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitFuncDef(this);
  else
    return visitor->visitChildren(this);
}
YlangParser::DefinContext* YlangParser::defin() {
  DefinContext *_localctx = _tracker.createInstance<DefinContext>(_ctx, getState());
  enterRule(_localctx, 4, YlangParser::RuleDefin);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(62);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DefinContext *>(_tracker.createInstance<YlangParser::ExternFuncDefContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(21);
      match(YlangParser::T__0);
      setState(22);
      match(YlangParser::T__1);
      setState(23);
      dynamic_cast<ExternFuncDefContext *>(_localctx)->rettype = match(YlangParser::ID);
      setState(24);
      dynamic_cast<ExternFuncDefContext *>(_localctx)->fname = match(YlangParser::ID);
      setState(25);
      match(YlangParser::T__2);
      setState(30);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == YlangParser::ID) {
        setState(26);
        dynamic_cast<ExternFuncDefContext *>(_localctx)->type = match(YlangParser::ID);
        setState(27);
        dynamic_cast<ExternFuncDefContext *>(_localctx)->arg = match(YlangParser::ID);
        setState(32);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(33);
      match(YlangParser::T__3);
      setState(37);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == YlangParser::T__4) {
        setState(34);
        match(YlangParser::T__4);
        setState(39);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DefinContext *>(_tracker.createInstance<YlangParser::FuncDefContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(40);
      match(YlangParser::T__0);
      setState(41);
      dynamic_cast<FuncDefContext *>(_localctx)->rettype = match(YlangParser::ID);
      setState(42);
      dynamic_cast<FuncDefContext *>(_localctx)->fname = match(YlangParser::ID);
      setState(43);
      match(YlangParser::T__2);
      setState(48);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == YlangParser::ID) {
        setState(44);
        dynamic_cast<FuncDefContext *>(_localctx)->type = match(YlangParser::ID);
        setState(45);
        dynamic_cast<FuncDefContext *>(_localctx)->arg = match(YlangParser::ID);
        setState(50);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(51);
      match(YlangParser::T__3);
      setState(53);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == YlangParser::T__4) {
        setState(52);
        match(YlangParser::T__4);
      }
      setState(55);
      dynamic_cast<FuncDefContext *>(_localctx)->body = expr(0);
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == YlangParser::T__4) {
        setState(56);
        match(YlangParser::T__4);
        setState(61);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

YlangParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t YlangParser::ExprContext::getRuleIndex() const {
  return YlangParser::RuleExpr;
}

void YlangParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MemberAccessContext ------------------------------------------------------------------

YlangParser::ExprContext* YlangParser::MemberAccessContext::expr() {
  return getRuleContext<YlangParser::ExprContext>(0);
}

tree::TerminalNode* YlangParser::MemberAccessContext::ID() {
  return getToken(YlangParser::ID, 0);
}

YlangParser::MemberAccessContext::MemberAccessContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::MemberAccessContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitMemberAccess(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InfixExprContext ------------------------------------------------------------------

std::vector<YlangParser::ExprContext *> YlangParser::InfixExprContext::expr() {
  return getRuleContexts<YlangParser::ExprContext>();
}

YlangParser::ExprContext* YlangParser::InfixExprContext::expr(size_t i) {
  return getRuleContext<YlangParser::ExprContext>(i);
}

YlangParser::InfixExprContext::InfixExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::InfixExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitInfixExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfExprContext ------------------------------------------------------------------

std::vector<YlangParser::ExprContext *> YlangParser::IfExprContext::expr() {
  return getRuleContexts<YlangParser::ExprContext>();
}

YlangParser::ExprContext* YlangParser::IfExprContext::expr(size_t i) {
  return getRuleContext<YlangParser::ExprContext>(i);
}

YlangParser::IfExprContext::IfExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::IfExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitIfExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AtomExprContext ------------------------------------------------------------------

YlangParser::FnatomContext* YlangParser::AtomExprContext::fnatom() {
  return getRuleContext<YlangParser::FnatomContext>(0);
}

YlangParser::AtomExprContext::AtomExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::AtomExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitAtomExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LetInExprContext ------------------------------------------------------------------

tree::TerminalNode* YlangParser::LetInExprContext::ID() {
  return getToken(YlangParser::ID, 0);
}

std::vector<YlangParser::ExprContext *> YlangParser::LetInExprContext::expr() {
  return getRuleContexts<YlangParser::ExprContext>();
}

YlangParser::ExprContext* YlangParser::LetInExprContext::expr(size_t i) {
  return getRuleContext<YlangParser::ExprContext>(i);
}

YlangParser::LetInExprContext::LetInExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::LetInExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitLetInExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SwitchExprContext ------------------------------------------------------------------

std::vector<YlangParser::ExprContext *> YlangParser::SwitchExprContext::expr() {
  return getRuleContexts<YlangParser::ExprContext>();
}

YlangParser::ExprContext* YlangParser::SwitchExprContext::expr(size_t i) {
  return getRuleContext<YlangParser::ExprContext>(i);
}

YlangParser::SwitchExprContext::SwitchExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::SwitchExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitSwitchExpr(this);
  else
    return visitor->visitChildren(this);
}

YlangParser::ExprContext* YlangParser::expr() {
   return expr(0);
}

YlangParser::ExprContext* YlangParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  YlangParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  YlangParser::ExprContext *previousContext = _localctx;
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, YlangParser::RuleExpr, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(117);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case YlangParser::T__18: {
        _localctx = _tracker.createInstance<IfExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(65);
        match(YlangParser::T__18);
        setState(66);
        dynamic_cast<IfExprContext *>(_localctx)->cond = expr(0);
        setState(68);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == YlangParser::T__4) {
          setState(67);
          match(YlangParser::T__4);
        }
        setState(70);
        dynamic_cast<IfExprContext *>(_localctx)->thenT = expr(0);
        setState(72);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == YlangParser::T__4) {
          setState(71);
          match(YlangParser::T__4);
        }
        setState(74);
        match(YlangParser::T__19);
        setState(76);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == YlangParser::T__4) {
          setState(75);
          match(YlangParser::T__4);
        }
        setState(78);
        dynamic_cast<IfExprContext *>(_localctx)->elseT = expr(4);
        break;
      }

      case YlangParser::T__20: {
        _localctx = _tracker.createInstance<SwitchExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(80);
        match(YlangParser::T__20);
        setState(81);
        dynamic_cast<SwitchExprContext *>(_localctx)->lhs = expr(0);
        setState(94);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(83);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == YlangParser::T__4) {
              setState(82);
              match(YlangParser::T__4);
            }
            setState(85);
            match(YlangParser::T__21);
            setState(86);
            expr(0);
            setState(88);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == YlangParser::T__4) {
              setState(87);
              match(YlangParser::T__4);
            }
            setState(90);
            expr(0); 
          }
          setState(96);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
        }
        setState(98);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == YlangParser::T__4) {
          setState(97);
          match(YlangParser::T__4);
        }
        setState(100);
        match(YlangParser::T__19);
        setState(102);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == YlangParser::T__4) {
          setState(101);
          match(YlangParser::T__4);
        }
        setState(104);
        expr(3);
        break;
      }

      case YlangParser::T__22: {
        _localctx = _tracker.createInstance<LetInExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(106);
        match(YlangParser::T__22);
        setState(107);
        dynamic_cast<LetInExprContext *>(_localctx)->name = match(YlangParser::ID);
        setState(108);
        match(YlangParser::T__23);
        setState(109);
        dynamic_cast<LetInExprContext *>(_localctx)->val = expr(0);
        setState(110);
        match(YlangParser::T__24);
        setState(112);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == YlangParser::T__4) {
          setState(111);
          match(YlangParser::T__4);
        }
        setState(114);
        dynamic_cast<LetInExprContext *>(_localctx)->e = expr(2);
        break;
      }

      case YlangParser::T__2:
      case YlangParser::T__25:
      case YlangParser::T__26:
      case YlangParser::ID:
      case YlangParser::NUMBER:
      case YlangParser::STRING: {
        _localctx = _tracker.createInstance<AtomExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(116);
        dynamic_cast<AtomExprContext *>(_localctx)->a = fnatom();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(136);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(134);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 17, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<InfixExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->lhs = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(119);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(120);
          dynamic_cast<InfixExprContext *>(_localctx)->op = match(YlangParser::T__6);
          setState(121);
          dynamic_cast<InfixExprContext *>(_localctx)->rhs = expr(8);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<InfixExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->lhs = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(122);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(123);
          dynamic_cast<InfixExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << YlangParser::T__7)
            | (1ULL << YlangParser::T__8)
            | (1ULL << YlangParser::T__9))) != 0))) {
            dynamic_cast<InfixExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(124);
          dynamic_cast<InfixExprContext *>(_localctx)->rhs = expr(8);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<InfixExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->lhs = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(125);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(126);
          dynamic_cast<InfixExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == YlangParser::T__10

          || _la == YlangParser::T__11)) {
            dynamic_cast<InfixExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(127);
          dynamic_cast<InfixExprContext *>(_localctx)->rhs = expr(7);
          break;
        }

        case 4: {
          auto newContext = _tracker.createInstance<InfixExprContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->lhs = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(128);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(129);
          dynamic_cast<InfixExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << YlangParser::T__12)
            | (1ULL << YlangParser::T__13)
            | (1ULL << YlangParser::T__14)
            | (1ULL << YlangParser::T__15)
            | (1ULL << YlangParser::T__16)
            | (1ULL << YlangParser::T__17))) != 0))) {
            dynamic_cast<InfixExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(130);
          dynamic_cast<InfixExprContext *>(_localctx)->rhs = expr(6);
          break;
        }

        case 5: {
          auto newContext = _tracker.createInstance<MemberAccessContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->obj = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(131);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");

          setState(132);
          match(YlangParser::T__5);
          setState(133);
          dynamic_cast<MemberAccessContext *>(_localctx)->name = match(YlangParser::ID);
          break;
        }

        } 
      }
      setState(138);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- FnatomContext ------------------------------------------------------------------

YlangParser::FnatomContext::FnatomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t YlangParser::FnatomContext::getRuleIndex() const {
  return YlangParser::RuleFnatom;
}

void YlangParser::FnatomContext::copyFrom(FnatomContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CallExprContext ------------------------------------------------------------------

tree::TerminalNode* YlangParser::CallExprContext::ID() {
  return getToken(YlangParser::ID, 0);
}

std::vector<YlangParser::ExprContext *> YlangParser::CallExprContext::expr() {
  return getRuleContexts<YlangParser::ExprContext>();
}

YlangParser::ExprContext* YlangParser::CallExprContext::expr(size_t i) {
  return getRuleContext<YlangParser::ExprContext>(i);
}

YlangParser::CallExprContext::CallExprContext(FnatomContext *ctx) { copyFrom(ctx); }

antlrcpp::Any YlangParser::CallExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<YlangVisitor*>(visitor))
    return parserVisitor->visitCallExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AtomAtomContext ------------------------------------------------------------------

YlangParser::AtomContext* YlangParser::AtomAtomContext::atom() {
  return getRuleContext<YlangParser::AtomContext>(0);
}

YlangParser::AtomAtomContext::AtomAtomContext(FnatomContext *ctx) { copyFrom(ctx); }
